welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:3: error: illegal start of simple pattern
	var T:=[1]
               ^golomb:4: error: '=' expected but ';' found.
	T(Nieme)=T(Nieme-1)+1
^